Display graph only when used Display partition labels under variable name

--- a/client/partials/projects/reporting/reporting-detailed.html
+++ b/client/partials/projects/reporting/reporting-detailed.html
@@ -98,15 +98,18 @@
 	</div>
 </form>
 
-<button class="btn btn-primary btn-xs pull-right noprint" svg-save>
-	<i class="fa fa-download"></i>
-	<span translate="shared.download_plot"></span>
-</button>
-<div style="clear: both"></div>
+<div ng-hide="plots|isEmpty">
 
-<reporting-graph-adapter type="'line'" rows="rows" cols="cols" plots="plots"></reporting-graph-adapter>
+	<button class="btn btn-primary btn-xs pull-right noprint" svg-save>
+		<i class="fa fa-download"></i>
+		<span translate="shared.download_plot"></span>
+	</button>
+	<div style="clear: both"></div>
 
-<div style="clear: both"></div>
+	<reporting-graph-adapter type="'line'" rows="rows" cols="cols" plots="plots"></reporting-graph-adapter>
+
+	<div style="clear: both"></div>
+</div>
 
 <button class="btn btn-primary btn-xs pull-right noprint" csv-save style="margin-bottom: 10px;">
 	<i class="fa fa-download"></i>
