Fix bug in input form. Save button should be disabled if form is invalid

--- a/client/partials/projects/input/collection-input-edition.html
+++ b/client/partials/projects/input/collection-input-edition.html
@@ -73,7 +73,7 @@
 		</p>
 	</div>
 
-	<a class="btn btn-primary" ng-click="save()" ng-disable="isUnchanged() || !isValid()">
+	<a class="btn btn-primary" ng-click="save()" ng-disabled="isUnchanged() || !isValid()">
 		<i class="fa fa-floppy-o"></i>
 		<span translate="shared.save"></span>
 	</a>
