--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -120,6 +120,8 @@ html(lang="en")
 					form(class="form-horizontal well well-sm", action="/authentication/login-partner", method="POST")
 
 						legend Partner authentication
+						
+						p(id="wrong_login" class="text-danger", style="display: none") Wrong username or password. Please try again
 
 						div(class="form-group")
 							label(for="username", class="col-sm-2 control-label") Username
