--- a/client/partials/projects/reporting/reporting-detailed.html
+++ b/client/partials/projects/reporting/reporting-detailed.html
@@ -135,7 +135,10 @@
 	<tbody>
 		<tr ng-repeat="row in rows">
 			<td style="text-align: center">
-				<input id="{{row.id}}" type="checkbox" ng-model="plots[row.id]" ng-if="row.type === 'data' && row.cols" />
+				<i class="fa fa-line-chart"
+				   ng-click="plots[row.id]=!plots[row.id]"
+				   ng-if="row.type === 'data' && row.cols"
+				   ng-style="{color: plots[row.id] ? 'black' : 'revert'}"></i>
 			</td>
 
 			<th ng-if="row.type === 'header'" colspan="{{1 + cols.length}}" class="indent{{row.indent}}">{{row.text}}</th>
