--- a/client/partials/_forms/optional-date.html
+++ b/client/partials/_forms/optional-date.html
@@ -1,6 +1,12 @@
 <div class="input-group">
 	<div class="input-group-addon">
-		<input type="checkbox" ng-model="specifyDate" />
+		<!-- <input type="checkbox" ng-model="specifyDate" /> -->
+	
+		<i class="fa fa-thumb-tack"
+		   ng-click="specifyDate=!specifyDate"
+		   ng-style="{color: specifyDate ? 'black' : 'revert'}"></i>
+
+
 	</div>
 
 	<input type="text" 
