--- a/client/partials/projects/reporting/reporting-detailed.html
+++ b/client/partials/projects/reporting/reporting-detailed.html
@@ -39,6 +39,9 @@
 								<span class="input-group-addon"><i class="fa fa-columns fa-fw"></i></span>
 								<select class="form-control input-sm" id="group-by-input" ng-model="query.groupBy">
 									<option value="day" translate="shared.day"></option>
+									<option value="month_week_sat" translate="shared.month_week_sat"></option>
+									<option value="month_week_sun" translate="shared.month_week_sun"></option>
+									<option value="month_week_mon" translate="shared.month_week_mon"></option>
 									<option value="week_sat" translate="shared.week_sat"></option>
 									<option value="week_sun" translate="shared.week_sun"></option>
 									<option value="week_mon" translate="shared.week_mon"></option>
