--- a/client/partials/projects/reporting/reporting.html
+++ b/client/partials/projects/reporting/reporting.html
@@ -77,7 +77,7 @@
 	<div style="clear: both"></div>
 
 	<reporting-graph-adapter
-		type="['year', 'semester', 'quarter', 'month', 'week_sat', 'week_sun', 'week_mon', 'day'].indexOf(groupBy) !== -1 ? 'line' : 'bar'"
+		type="['year', 'semester', 'quarter', 'month', 'month_week_sat', 'month_week_sun', 'month_week_mon', 'week_sat', 'week_sun', 'week_mon', 'day'].indexOf(groupBy) !== -1 ? 'line' : 'bar'"
 		rows="rows" cols="cols" plots="plots">
 	</reporting-graph-adapter>
 
