--- a/client/partials/projects/structure/collection-form-edition.html
+++ b/client/partials/projects/structure/collection-form-edition.html
@@ -54,6 +54,9 @@
 		<div class="col-sm-10">
 			<select class="form-control" name="periodicity" id="periodicity-input" ng-model="editableProject.forms[currentFormIndex].periodicity">
 				<option value="day" translate="project.periodicities.day"></option>
+				<option value="month_week_sat" translate="project.periodicities.month_week_sat"></option>
+				<option value="month_week_sun" translate="project.periodicities.month_week_sun"></option>
+				<option value="month_week_mon" translate="project.periodicities.month_week_mon"></option>
 				<option value="week_sat" translate="project.periodicities.week_sat"></option>
 				<option value="week_sun" translate="project.periodicities.week_sun"></option>
 				<option value="week_mon" translate="project.periodicities.week_mon"></option>
