Continue dockerfile / dockercompose implementation

--- a/frontend/src/partials/menu.html
+++ b/frontend/src/partials/menu.html
@@ -73,7 +73,7 @@
 					</a>
 					<ul class="dropdown-menu">
 						<li>
-							<a href="/authentication/logout">
+							<a href="/api/authentication/logout">
 								<i class="fa fa-fw fa-arrow-left"></i>
 								<span translate="shared.logout"></span>
 							</a>
