--- a/frontend/src/partials/projects/input/collection-input-list.html
+++ b/frontend/src/partials/projects/input/collection-input-list.html
@@ -1,5 +1,6 @@
 <ol class="breadcrumb">
 	<li ng-if="::(userCtx.type == 'user')"><a ui-sref="main.projects" translate="shared.projects"></a></li>
+	<li class="active" title="{{masterProject.country}}" ng-bind="masterProject.country|maxLength:50"></li>
 	<li class="active" title="{{::masterProject.name}}" ng-bind="::masterProject.name|maxLength:50"></li>
 	<li class="active">{{::form.name|maxLength:50}}</li>
 </ol>
