Replace all occurrences of "statistiques" by "rapport".

--- a/frontend/src/partials/indicators/list.html
+++ b/frontend/src/partials/indicators/list.html
@@ -24,9 +24,7 @@
 
 			<div>{{indicator.description[language]|maxLength:200}}</div>
 			
-			<a ui-sref="main.indicator_reporting({indicatorId: indicator._id})" class="btn btn-xxs btn-default">
-				voir les statistiques
-			</a>
+			<a ui-sref="main.indicator_reporting({indicatorId: indicator._id})" class="btn btn-xxs btn-default" translate="indicator.see_report"></a>
 		</div>
 
 	</div></div>
