Fix PDF download links

--- a/frontend/src/partials/projects/structure/collection-form-list.html
+++ b/frontend/src/partials/projects/structure/collection-form-list.html
@@ -40,8 +40,8 @@
 			<td>
 				<i class="fa fa-file-pdf-o"></i>
 				<span translate="project.download_pdf"></span>
-				(<a href="/resources/project/{{masterProject._id}}/data-source/{{form.id}}.pdf?orientation=portrait" target="_blank" translate="shared.portrait"></a>,
-				<a href="/resources/project/{{masterProject._id}}/data-source/{{form.id}}.pdf?orientation=landscape" target="_blank" translate="shared.landscape"></a>)
+				(<a href="/api/resources/project/{{masterProject._id}}/data-source/{{form.id}}.pdf?orientation=portrait" target="_blank" translate="shared.portrait"></a>,
+				<a href="/api/resources/project/{{masterProject._id}}/data-source/{{form.id}}.pdf?orientation=landscape" target="_blank" translate="shared.landscape"></a>)
 			</td>
  		</tr>
 	</tbody>
