--- a/frontend/src/partials/projects/structure/logframe-list.html
+++ b/frontend/src/partials/projects/structure/logframe-list.html
@@ -36,8 +36,8 @@
 			<td>
 				<i class="fa fa-file-pdf-o"></i>
 				<span translate="project.download_pdf"></span>
-				(<a href="/resources/project/{{editableProject._id}}/logical-frame/{{index}}.pdf?orientation=portrait" target="_blank" translate="shared.portrait"></a>,
-				<a href="/resources/project/{{editableProject._id}}/logical-frame/{{index}}.pdf?orientation=landscape" target="_blank" translate="shared.landscape"></a>)
+				(<a href="/api/resources/project/{{editableProject._id}}/logical-frame/{{index}}.pdf?orientation=portrait" target="_blank" translate="shared.portrait"></a>,
+				<a href="/api/resources/project/{{editableProject._id}}/logical-frame/{{index}}.pdf?orientation=landscape" target="_blank" translate="shared.landscape"></a>)
 			</td>
  		</tr>
 	</tbody>
