--- a/frontend/src/partials/projects/structure/extra-indicators.html
+++ b/frontend/src/partials/projects/structure/extra-indicators.html
@@ -10,37 +10,16 @@
 <p ng-if="editableProject.extraIndicators.length == 0" translate="project.no_extra_indicators"></p>
 
 <div ng-sortable="{handle: '.indicator-handle'}">
-	<div class="panel panel-default indicator-panel"
-		 ng-repeat="indicator in editableProject.extraIndicators">
 
-		<div class="panel-heading" title="{{indicator.display}}">
-			<i class="fa fa-arrows fa-fw indicator-handle"></i>
-			{{indicator.display|maxLength:90}}
-		</div>
-		
-		<div class="panel-body" style="padding-bottom: 10px">
-			<strong>{{'project.baseline'|translate}}:</strong> {{indicator.baseline != null ? indicator.baseline : '?'}}<br/>
-			<strong>{{'project.target'|translate}}:</strong> {{indicator.target != null ? indicator.target : '?'}}<br/>
+	<indicator
+		ng-repeat="indicator in editableProject.extraIndicators"
+		indicator="indicator"
+		indicator-list="editableProject.extraIndicators"
+		project="editableProject"></indicator>
 
-			<strong>{{'project.computation'|translate}}:</strong>
-			<span class="text-danger" ng-if="!indicator.computation">
-				{{'project.indicator_is_not_computed'|translate}}
-				<i class="fa fa-unlink" ></i>
-			</span>
-			<span class="text-success" ng-if="indicator.computation">
-				{{'project.indicator_is_computed'|translate}}
-				<i class="fa fa-link" ></i>
-			</span>
-
-			<button class="btn btn-xxs btn-default" style="width: 100%; display: block" ng-click="editIndicator(indicator)">
-				<i class="fa fa-pencil"></i>
-				{{'shared.edit'|translate}}
-			</button>
-		</div>
-	</div>
 </div>
 
-<a class="btn btn-default btn-sm" ng-click="editIndicator(null)" style="margin-bottom: 20px">
+<a class="btn btn-default btn-sm" ng-click="addIndicator()" style="margin-bottom: 20px">
 	<i class="fa fa-plus"></i>
 	{{"project.add_indicator"|translate}}
 </a>
