Fix translation issue on the logframe edition form for activities

--- a/frontend/src/partials/projects/structure/logframe-edit.html
+++ b/frontend/src/partials/projects/structure/logframe-edit.html
@@ -318,7 +318,7 @@
 														<label
 															for="activity-desc-{{purposeId}}-{{outputId}}-{{activityId}}-input"
 															class="col-sm-2 control-label"
-															translate="project.output"></label>
+															translate="project.activity"></label>
 
 														<div class="col-sm-10">
 															<textarea
