--- a/frontend/src/partials/projects/structure/logframe-edit.html
+++ b/frontend/src/partials/projects/structure/logframe-edit.html
@@ -17,7 +17,7 @@
 			<span translate="project.general_informations"></span>
 		</legend>
 
-		<!-- [General information name] -->
+		<!-- [Name] -->
 		<div class="form-group" show-errors>
 			<label for="logframe-name-input" class="col-sm-2 control-label" translate="shared.name"></label>
 
@@ -37,7 +37,39 @@
 				</span>
 			</div>
 		</div>
-		<!-- [/General information name] -->
+		<!-- [/Name] -->
+
+		<!-- [Specific dates] -->
+		<div class="form-group">
+			<label for="logframe-startdate-input" class="col-sm-2 control-label" translate="project.specific_start"></label>
+			<div class="col-sm-10">
+				<optional-date
+					ng-model="editableProject.logicalFrames[logicalFrameIndex].start"
+					default="editableProject.start"
+					message="project.same_as_start"></optional-date>
+
+				<span class="help-block">
+					<i class="fa fa-info-circle"></i>
+					{{'project.logframe_edit_help_start'|translate}}
+				</span>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label for="logframe-enddate-input" class="col-sm-2 control-label" translate="project.specific_end"></label>
+			<div class="col-sm-10">
+				<optional-date
+					ng-model="editableProject.logicalFrames[logicalFrameIndex].end"
+					default="editableProject.end"
+					message="project.same_as_end"></optional-date>
+
+				<span class="help-block">
+					<i class="fa fa-info-circle"></i>
+					{{'project.logframe_edit_help_end'|translate}}
+				</span>
+			</div>
+		</div>
+		<!-- [/Specific dates] -->
 	</fieldset>
 	<!-- [/General information] -->
 
