Add missing title on the "create project" button when not allowed

--- a/frontend/src/partials/projects/list.html
+++ b/frontend/src/partials/projects/list.html
@@ -4,7 +4,7 @@
 	<span translate="project.create"></span>
 </a>
 
-<div class="pull-right" acl-lacks-project-creation style="cursor: not-allowed">
+<div class="pull-right"  title="{{'project.cant_create'|translate}}" acl-lacks-project-creation style="cursor: not-allowed">
 	<a class="btn btn-primary disabled">
 		<i class="fa fa-plus"></i>
 		<span translate="project.create"></span>
